--- a/src/components/ItemDetailContainer/ItemDetailContainer.css
+++ b/src/components/ItemDetailContainer/ItemDetailContainer.css
@@ -9,7 +9,7 @@
 }
 
 .itemDetailContainer h3 {
-    color: #007BFF;
+    color: #000000;
 }
 
 .itemDetailContainer img {
@@ -27,4 +27,8 @@
     font-size: 24px;
     color: #28a745;
     font-weight: bold;
+}
+
+button {
+    background-color: #000000;
 }
