--- a/src/components/ItemListContainer/itemListContainer.css
+++ b/src/components/ItemListContainer/itemListContainer.css
@@ -1,27 +1,26 @@
 .item-list-container {
+    
+    font-family: "Sarabun", sans-serif;
     padding: 20px;
     text-align: center;
-    background-color: #f8f8f8;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    margin: 20px;
+    background-color: #aeaea7;
 }
 
 .item-list-greeting {
     margin-bottom: 20px;
     font-size: 24px;
-    color: #333;
+    color: #000000;
 }
 
 .item-list-title {
-    font-size: 28px;
-    color: #007BFF;
+    font-size: 80px;
+    color: #000000;
     margin: 10px 0;
 }
 
 .item-list-description {
-    font-size: 16px;
-    color: #666;
+    font-size: 26px;
+    color: #000000;
     margin-bottom: 20px;
 }
 
@@ -32,9 +31,6 @@
     animation: fadeIn 1s ease-in-out;
 }
 
-.product-grid {
-    background-color: red;
-}
 
 .product-item {
     background-color: #fff;
@@ -82,10 +78,12 @@
 }
 
 .product-item button {
+    text-decoration: none;
+    list-style: none;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
-    background-color: #007bff;
+    background-color: #000000;
     color: white;
     font-size: 16px;
     cursor: pointer;
@@ -93,7 +91,7 @@
 }
 
 .product-item button:hover {
-    background-color: #0056b3;
+    background-color: #eeff00;
 }
 
 .product-item button a {
